✨feat : 홈 화면에서 스웨거 버튼 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,12 @@
 <div class="container">
     <h1>SEEAT 백엔드 서버에 오신 것을 환영합니다.</h1>
     <p>이곳은 SEEAT 프로젝트의 개발 서버입니다.</p>
+
+    <div class="button-row">
+        <a class="swagger-button" href="https://api.seeat.site/swagger-ui/index.html" target="_blank">Swagger API Button</a>
+    </div>
 </div>
+
 
 </body>
 </html>
